# starun

./: .dockerignore  .env.example  .gitignore  LICENSE  Makefile  PRODUCT.md  README.md  STARUN-PRD.md  compose.yaml
api/: .dockerignore  .env.example  Dockerfile  alembic.ini  pyproject.toml
api/alembic/: env.py
api/alembic/versions/: 0001_initial.py  0002_task_deletion_cleanup.py  0003_upload_cleanup_intent.py  0004_task_review_required.py
api/app/: config.py  filesystem.py  main.py
api/app/agent/: __init__.py  contracts.py  mock_model.py  mock_tools.py  registry.py  runner.py
api/app/agent_sdk/: __init__.py  agents.py  artifacts.py  bridge.py  contracts.py  errors.py  providers.py  runtime.py  runtime_types.py  workspaces.py
api/app/analysis/: __init__.py  kimi.py  models.py  preview.py  starun_agent_model.py
api/app/artifacts/: __init__.py  contracts.py  router.py  store.py
api/app/cleanup/: __init__.py  service.py
api/app/db/: __init__.py  models.py  session.py
api/app/fits/: __init__.py  errors.py  inspector.py  schemas.py
api/app/processing/: __init__.py  agent.py  art_direction.py  image_provider.py  models.py  tools.py
api/app/security/: __init__.py  rate_limit.py
api/app/tasks/: __init__.py  events.py  executor.py  handlers.py  recovery.py  router.py  schemas.py  service.py
api/app/uploads/: __init__.py  errors.py  middleware.py  router.py  schemas.py  service.py
api/app/usage/: __init__.py  service.py
api/scripts/: probe_image_provider.py
api/starnet2/: .gitkeep
api/tests/: conftest.py  test_health.py  test_logging.py
(+182 files in other folders)
