[project]
name = "starun-api"
version = "0.1.0"
license = "GPL-3.0-only"
requires-python = ">=3.12,<3.13"
classifiers = [
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
]
dependencies = [
  "alembic>=1.13",
  "astropy>=6.1",
  "fastapi>=0.115",
  "httpx>=0.27",
  "numpy>=2.1",
  "opencv-python>=4.8",
  "openai-agents>=0.14.0,<0.15.0",
  "pillow>=11.0",
  "pydantic-settings>=2.5",
  "python-multipart>=0.0.20",
  "PyWavelets>=1.5",
  "scikit-image>=0.21",
  "scipy>=1.10",
  "sqlalchemy>=2.0",
  "tifffile>=2023.7",
  "uvicorn[standard]>=0.30",
  "xisf>=0.9",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.11",
  "pytest>=8.3",
  "pytest-asyncio>=0.24",
  "ruff>=0.6",
]

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.ruff]
line-length = 100

[tool.mypy]
python_version = "3.12"
strict = true
